# mumoas-code

./: .gitignore  CITATION.cff  CODE_AVAILABILITY.md  LICENSE  PUBLIC_RELEASE_MANIFEST.md  README.md  pyproject.toml  requirements.txt
analysis_r/: MAIN_TEXT_FIGURE_MAP.md  README.md  R_packages.txt  run_all.R  smoke_parse.R
analysis_r/R/: mumoas_sc_multiomics.R
analysis_r/config/: mumoas_sc_multiomics_template.yml
analysis_r/scripts/: 01_dimension_clustering_lineages.R  02_marker_gene_dotplot.R  03_diagonal_volcano.R  04_infercnv_cnv_score.R  05_odds_ratio_heatmap.R  06_geneNMF_metaprograms.R  07_kegg_enrichment.R  08_hallmark_gene_sets.R  09_mp_rcb_signatures.R  10_aucell_scores.R  11_rcb_group_scores.R  12_cellchat_interactions.R  13_gsea_visualization.R  14_external_model_validation_stats.R  15_validation_scrna_workflow.R  16_mp_score_violin.R  17_rcb_score_figures.R  18_enrichment_heatmap.R
configs/: public_example.yaml  signatures.yaml
mumoas/: __init__.py  config.py  io.py
mumoas/evaluation/: __init__.py  calibration.py  classification.py  decision_curve.py  survival.py
mumoas/imaging/: __init__.py  foundation.py  patches.py  preprocessing.py  radiomics.py
mumoas/modeling/: __init__.py  cvae.py  features.py  train.py
scripts/: 00_make_synthetic_data.py  01_extract_imaging_features.py  02_train_cvae_rcb.py  03_radiogenomic_association.py  06_evaluate_predictions.py  run_public_smoke_test.py
tests/: test_config_io.py  test_evaluation.py  test_imaging.py  test_imports.py  test_modeling.py  test_public_smoke.py  test_radiogenomics.py
(+5 files in other folders)
