[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mumoas"
version = "0.1.0"
description = "Public journal-review Python model code for the MuMoAS study."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "MuMoAS study team" }
]
keywords = [
  "MuMoAS",
  "journal-review",
  "multimodal-analysis",
  "biomedical-research"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "scikit-learn",
  "PyYAML",
  "torch",
  "matplotlib",
  "seaborn"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mumoas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"
